// IMPORTANT LICENSE NOTICE
//
// SPDX-License-Identifier: CosmosLabs-Evaluation-Only
//
// This file is NOT licensed under the Apache License 2.0.
//
// Licensed under the Cosmos Labs Source Available Evaluation License, which forbids:
// - commercial use,
// - production use, and
// - redistribution.
//
// See https://github.com/cosmos/cosmos-sdk/blob/main/enterprise/poa/LICENSE for full terms.
// Copyright (c) 2026 Cosmos Labs US Inc.

syntax = "proto3";

package cosmos.poa.v1;

import "cosmos/msg/v1/msg.proto";
import "cosmos/poa/v1/poa.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";

option go_package = "github.com/cosmos/cosmos-sdk/enterprise/poa/types";

service Msg {
  rpc UpdateParams(MsgUpdateParams) returns (MsgUpdateParamsResponse);
  rpc CreateValidator(MsgCreateValidator) returns (MsgCreateValidatorResponse);
  rpc UpdateValidators(MsgUpdateValidators) returns (MsgUpdateValidatorsResponse);
  rpc WithdrawFees(MsgWithdrawFees) returns (MsgWithdrawFeesResponse);
}

message MsgUpdateParams {
  option (cosmos.msg.v1.signer) = "admin";

  Params params = 1 [(gogoproto.nullable) = false];
  string admin = 2;
}

message MsgUpdateParamsResponse {}

message MsgCreateValidator {
  option (cosmos.msg.v1.signer) = "operator_address";

  google.protobuf.Any pub_key = 1;
  string moniker = 2;
  string description = 3;
  string operator_address = 4;
}

message MsgCreateValidatorResponse {}

message MsgUpdateValidators {
  option (cosmos.msg.v1.signer) = "admin";

  repeated Validator validators = 1 [(gogoproto.nullable) = false];
  string admin = 2;
}

message MsgUpdateValidatorsResponse {}

message MsgWithdrawFees {
  option (cosmos.msg.v1.signer) = "operator";

  string operator = 1;
}

message MsgWithdrawFeesResponse {}
